# wordzilla

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
conf/: tox.ini
conf/base/: catalog.yml  parameters_data.yml
conf/local/: credentials.yml
data_etl/0_extract/cambridge/: data_2.xlsx  data_3.xlsx
docs/: data.md
src/wordzilla/: __init__.py  __main__.py  credentials.py  log.py  pipeline_registry.py  settings.py  telegrambot.py  user.py  word.py
src/wordzilla/pipelines/data/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data/: test_pipeline.py
